--- a/app/Views/Templates/wallet.twig
+++ b/app/Views/Templates/wallet.twig
@@ -26,9 +26,8 @@
             {% endif %}
 
             <div class="px-4 py-1">
-
                 {% if coin.count<0 %}
-                <div class="card text-white bg-danger mb-3" style="max-width: 14rem; background: darkred">
+                <div class="card text-white bg-danger mb-3 shadow-xl shadow-inner-blue-700" style="max-width: 14rem; background: darkred">
                     <div class="card-header" style="font-weight: bold">{{ coin.symbol }}: {{ coin.count }}</div>
                     <div class="card-body">
                         <p class="card-text"><img src="{{ coin.logo }}"></p>
@@ -37,9 +36,7 @@
             </div>
             {% endif %}
                     {% if coin.count>0 %}
-                    <div class="card text-black bg-light mb-3" style="max-width: 14rem;">
-
-
+                    <div class="card text-black bg-light mb-3 shadow-xl" style="max-width: 14rem;">
                         <div class="card-header" style="font-weight: bold">{{ coin.symbol }}: {{ coin.count }}</div>
                         <div class="card-body">
                             <p class="card-text"><img src="{{ coin.logo }}"></p>
