--- a/app/Views/Templates/sendProfile.twig
+++ b/app/Views/Templates/sendProfile.twig
@@ -15,7 +15,8 @@
     <div class="flex items-center justify-center">
         <div class="card text-black mb-3 shadow-xl"
              style="width:50%; color:black; text-align: center;background-color:#e2e2fd">
-            <h1 class="text-3xl font-bold text-center text-teal-300" style="color: black">You are sending {{ sendSymbol }}</h1>
+            <h1 class="text-3xl font-bold text-center text-teal-300" style="color: black">You are
+                sending {{ sendSymbol }}</h1>
 
             <form action="/sendProfile" method="post">
 
